--- a/package.json
+++ b/package.json
@@ -1,15 +1,26 @@
 {
   "devDependencies": {
-    "tailwindcss": "^3.3.5"
-  },
-  "dependencies": {
     "@alpinejs/persist": "^3.13.2",
     "alpinejs": "^3.13.2",
+    "autoprefixer": "^10.4.16",
+    "css-loader": "^6.8.1",
+    "cssnano": "^6.0.1",
+    "css-minimizer-webpack-plugin": "^5.0.1",
+    "eslint": "^8.53.0",
+    "eslint-config-semistandard": "^17.0.0",
     "highlight.js": "^11.9.0",
+    "mini-css-extract-plugin": "^2.7.6",
+    "postcss": "^8.4.31",
+    "postcss-loader": "^7.3.3",
+    "style-loader": "^3.3.3",
+    "tailwindcss": "^3.3.5",
+    "terser-webpack-plugin": "^5.3.9",
     "webpack": "^5.89.0",
     "webpack-cli": "^5.1.4"
   },
   "scripts": {
-    "build": "webpack --config webpack.config.js"
+    "lint": "eslint app/resources/js",
+    "dev": "webpack --watch",
+    "build": "webpack --env prod --progress --profile"
   }
 }
